include/dss_capi.h

    /*
    Full object name of element being monitored.
    */
    DSS_CAPI_DLL char* Monitors_Get_Element(void);
    /*
    Full object name of element being monitored.
    */
    DSS_CAPI_DLL void Monitors_Set_Element(char* Value);
    /*
    Terminal number of element being monitored
    */
    DSS_CAPI_DLL int32_t Monitors_Get_Terminal(void);
    /*
    Terminal number of element being monitored.
    */
    DSS_CAPI_DLL void Monitors_Set_Terminal(int32_t Value);