src/v8/CAPI_Monitors.pas


function Monitors_Get_Element():PAnsiChar;cdecl;
begin
    Result := DSS_GetAsPAnsiChar(Monitors_Get_Element_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Element(const Value: PAnsiChar);cdecl;
var
  pMon:TMonitorObj;
begin
  if ActiveCircuit[ActiveActor] <> Nil then begin
    pMon := ActiveCircuit[ActiveActor].Monitors.Active;
    if PMon <> Nil then Begin
       pMon.ElementName := Value ;
       pMon.PropertyValue [1] := Value;
       pMon.RecalcElementData(ActiveActor);
    End;
  end;

end;
//------------------------------------------------------------------------------
function Monitors_Get_Terminal():Integer;cdecl;
var
  pMon:TMonitorObj;
begin
  if ActiveCircuit[ActiveActor] <> Nil then begin
    pMon := ActiveCircuit[ActiveActor].Monitors.Active;
    if PMon <> Nil then Result := pMon.MeteredTerminal ;
  end;
end;
//------------------------------------------------------------------------------
procedure Monitors_Set_Terminal(Value: Integer);cdecl;
var
  pMon:TMonitorObj;
begin
  if ActiveCircuit[ActiveActor] <> Nil then begin
    pMon := ActiveCircuit[ActiveActor].Monitors.Active;
    if PMon <> Nil then Begin
       pMon.MeteredTerminal  := Value ;
       pMon.RecalcElementData(ActiveActor);
    End;
  end;

end;
//------------------------------------------------------------------------------
END.
